# ai-deep-research-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_deep_research_assistant/: clients.py  main.py
ai_deep_research_assistant/agents/: conversation.py  guardrail.py  planner.py  researcher.py  synthesizer.py
ai_deep_research_assistant/cli/: formatters.py  interface.py
ai_deep_research_assistant/config/: settings.py
ai_deep_research_assistant/graph/: state.py  workflow.py
ai_deep_research_assistant/tools/: brave_tools.py  cache.py  web_scraper.py
tests/: conftest.py
tests/unit/: test_agents_conversation.py  test_agents_guardrail.py  test_agents_planner.py  test_agents_researcher.py  test_agents_synthesizer.py  test_graph_workflow.py
